--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node .",
+    "format": "prettier --write index.js fixed-links.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +14,8 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "prettier": "^1.16.4"
   }
 }
